# easymp3gain

./: 01_projdepends.patch  AUTHORS  CHANGELOG.txt  CMakeLists.txt  ChangeLog.txt  README.txt  RELEASE.txt  easymp3gain.lpi  easymp3gain.lpi.bak  easymp3gain.lpr  german.lng  history.txt  strip_binary.sh  todo.txt  unitconsoleoutput.lfm  unitconsoleoutput.lrs  unitgainconstant.lfm  unitgainconstant.lrs  unitgainconstant.pas.bak  unitgainconstant.ppu  unitinfo.lfm  unitinfo.lrs  unitinfo.pas  unitinfo.ppu  unitmain.lfm  unitmain.lrs  unitmain.pas  unitmain.pas.bak  unitmain.ppu  unitmp3gain.pas  unitmp3gain.pas.bak  unitmp3gain.ppu  unittranslate.pas
applications/: easymp3gain.desktop
data/: CMakeLists.txt  easymp3gain.desktop.in
data/cmake/: FindFPC.cmake  FindLazbuild.cmake  FindQt4Pas.cmake  lcl_build_gui.cmake
data/icons/: CMakeLists.txt
help/: CMakeLists.txt  index.de.html  index.html  install.de.html  install.html
icons/Tango/: easymp3gain.xcf
lang/: easymp3gain.de.po  easymp3gain.it.po  easymp3gain.pl.po  easymp3gain.po
languages/: easymp3gain.de.po
po/: cs.po  de.po  it.po  pl.po
src/: CMakeLists.txt  Makefile  appversion.inc.in  callbackprocess.pas  clean.sh  easymp3gain.compiled  easymp3gain.lpi  easymp3gain.lpi.bak  easymp3gain.lpr  easymp3gain.lrs  easymp3gain.rc  easymp3gain.res  install.sh  make.sh  uninstall.sh  unitconsoleoutput.lfm  unitconsoleoutput.lrs  unitconsoleoutput.pas  unitgainconstant.lfm  unitgainconstant.lrs  unitgainconstant.pas  unitgainconstant.pas.bak  unitgainconstant.ppu  unitinfo.lfm  unitinfo.lrs  unitinfo.pas  unitinfo.pas.bak  unitinfo.ppu  unitmain.lfm  unitmain.lrs  unitmain.lrt  unitmain.pas  unitmain.pas.bak  unitmain.ppu  unitmediagain.pas  unitmp3gain.pas  unitmp3gain.pas.bak  unitmp3gain.ppu  unitoptions.lfm  unitoptions.lrs  (+5 more)
src/test/: callbackprocess.pas  process.lpi  process.lpr  unit1.lfm  unit1.pas  unitmp3gain.pas
src/test/languages/: process.de.po  process.po
translations/: german.lng
